--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 logging.level.org.springframework.data.r2dbc=DEBUG
-
-spring.r2dbc.url=r2dbc:pool:mysql://localhost:3306/test
-spring.r2dbc.username=root
-spring.r2dbc.password=root
-spring.r2dbc.name=test
+spring.r2dbc.url=r2dbc:h2:mem:///testdb;DB_CLOSE_DELAY=-1;
+spring.datasource.driver-class-name= org.h2.Driver
+#spring.r2dbc.url=r2dbc:pool:mysql://localhost:3306/test
+#spring.r2dbc.username=root
+#spring.r2dbc.password=root
+#spring.r2dbc.pool.max-size=10
+#spring.r2dbc.pool.max-create-connection-time=10s
